src/components/Search.css
.search-bar {
  color: black;
  text-align: center;
  margin: 0 auto;
}

.search-bar select, .search-bar option {
  width: 140px;
  text-align-last: center;
}

.search-bar input {
  max-width: 200px;
}

.search-bar input, .search-bar select {
  text-align: center;
}

.search-bar button {
  width: 60px;
  vertical-align: bottom;
}

.search {
  height: 30px;
}

.search-bar input, .search-bar button, .search-bar select {
  height: 40px;
  font-size: 20px;
}

@media (max-width:426px) {
  .search-bar {
    width: 200px;
  }
  .search-bar input, .search-bar select {
    margin: 5px 0 5px 0;
    max-width: 100%
  }
}

@media (min-width:425px) {
  .search-bar input, select {
    margin-right: 5px
  }
}

